# agentic_optimizer

./: .deepsource.toml  .gitignore  .gitmodules  BENCHMARK_DASHBOARD.md  CHUNKING.md  CLAUDE.md  CONTEXT_IMPROVEMENT.md  CONTEXT_MANAGEMENT.md  COVERAGE_ANALYSIS.md  COVERAGE_OVERVIEW.md  Cargo.toml  DOCUMENTATION_CLEANUP.md  FIXTURE_COVERAGE.md  FIXTURE_STATUS.md  INTERACTIVE_AGENT_COMPLETE.md  ISSUES_AND_RECOMMENDATIONS.md  MODEL_SETUP.md  README.md  TEST_AUDIT.md  TIMING.md  USAGE.md  VECTOR_SEARCH.md  add_docs.py  clippy.toml  config.example.toml  coverage_baseline.txt  gungraun-output.txt  iai-results.md  index.html  perf-results.md  quality-results.md  remove_tests.py  rustc-ice-2025-10-09T02_53_30-24184.txt  test-quality.md  test_audit_complete.txt
benchmarks/: Cargo.toml  FULL_SUITE_ANALYSIS.md  IMPROVEMENT_SUGGESTIONS.md  PHASE6_ANALYSIS.md  README.md  RUNNING_BENCHMARKS.md  SETUP.md  USAGE.md  latest_results.md  phase6_code_aware_embeddings.md  testing.md
benchmarks/crates/criterion/: Cargo.toml
benchmarks/crates/gungraun/: Cargo.toml
benchmarks/crates/quality/: .gitignore  Cargo.toml  README.md
benchmarks/data/: .gitignore  quality-results.md
benchmarks/data/coverage/: baseline_before_removal.info  latest.info
benchmarks/data/criterion/: latest.json
benchmarks/data/quality/: latest.json
benchmarks/src/: lib.rs  main.rs  metrics.rs  perf_bench.rs  test_case.rs
benchmarks/test_cases/browser_specific/: css_box_model.toml  html_parsing.toml
benchmarks/test_cases/general/: api_endpoints.toml  configuration_management.toml  logging_system.toml  networking_layer.toml  rendering_compositor.toml  visual_formatting.toml
benchmarks/test_cases/valor/: animation_performance.toml  async_rendering.toml  dom_mutations.toml  dom_tree.toml  font_loading.toml  grid_layout.toml  js_runtime.toml  rendering_pipeline.toml  selector_performance.toml  viewport_units.toml
benchmarks/test_repositories/: .gitignore
crates/agentic-agent/: Cargo.toml  PATH_RESOLUTION.md  TOOLS.md  TOOL_EXECUTION.md
crates/agentic-agent/src/: agent.rs  config.rs  executor.rs  lib.rs  tools.rs  types.rs
crates/agentic-agent/tests/: tool_integration.rs
crates/agentic-cli/: Cargo.toml
crates/agentic-cli/src/: cli.rs  main.rs  ollama.rs
crates/agentic-context/: Cargo.toml
crates/agentic-context/src/: benchmark.rs  builder.rs  context_inclusion.rs  expander.rs  lib.rs  models.rs
crates/agentic-context/tests/: bm25_tokenization.rs  chunking_validation.rs
crates/agentic-languages/: Cargo.toml
crates/agentic-languages/src/: backends.rs  lib.rs  provider.rs
crates/agentic-optimizer/: Cargo.toml
crates/agentic-optimizer/src/: lib.rs  main.rs
crates/agentic-providers/: Cargo.toml
crates/agentic-providers/src/: anthropic.rs  groq.rs  lib.rs  openrouter.rs
crates/agentic-routing/: Cargo.toml  README.md
crates/agentic-routing/examples/: basic_routing.rs
crates/agentic-routing/src/: error.rs  lib.rs  orchestrator.rs  types.rs
crates/agentic-routing/tests/: integration_tests.rs
crates/agentic-tools/: Cargo.toml  README.md  USAGE_GUIDELINES.md
crates/agentic-tools/examples/: basic_usage.rs
crates/agentic-tools/src/: bash.rs  edit.rs  lib.rs  show.rs  tool.rs
crates/integration-tests/: AUDIT.md  Cargo.toml  README.md
crates/integration-tests/examples/: generate_embeddings.rs
crates/integration-tests/src/: event_source.rs  execution_tracker.rs  execution_verifier.rs  file_verifier.rs  fixture.rs  fixture_loader.rs  lib.rs  mock_provider.rs  prompt_verifier.rs  runner.rs  scenario.rs  timing.rs  tui_helpers.rs  tui_test_helpers.rs  types.rs  ui_verifier.rs  verification_result.rs  verifier.rs  verify.rs  workspace_setup.rs
crates/integration-tests/tests/: e2e_scenarios.rs  fixture_tests.rs  tui_integration.rs  unified_tests.rs
crates/merlin-agent/: Cargo.toml  PATH_RESOLUTION.md  README.md  TOOLS.md  TOOL_EXECUTION.md
crates/merlin-agent/src/: agent.rs  calculator.rs  config.rs  executor.rs  exit_validators.rs  lib.rs  orchestrator.rs  thread_store.rs  tools.rs  types.rs
crates/merlin-agent/tests/: E2E_TESTING_FRAMEWORK.md  agent_executor_integration.rs  build_isolation_integration.rs  comprehensive_e2e_tests.rs  executor_pool_integration.rs  orchestrator_integration.rs  orchestrator_unit_tests.rs  task_coordinator_comprehensive.rs  task_list_e2e.rs  task_list_fixture_runner.rs  tool_integration.rs  transaction_state_integration.rs  validator_pipeline_integration.rs
crates/merlin-cli/: Cargo.toml  README.md
crates/merlin-cli/src/: cli.rs  handlers.rs  interactive.rs  lib.rs  main.rs  ollama.rs  utils.rs
crates/merlin-cli/tests/: async_integration.rs  cli_e2e.rs
crates/merlin-context/: Cargo.toml  README.md
crates/merlin-context/src/: benchmark.rs  builder.rs  context_fetcher.rs  context_inclusion.rs  context_manager.rs  expander.rs  fs_utils.rs  lib.rs  models.rs  pruning.rs
crates/merlin-context/tests/: bm25_tokenization.rs  chunking_validation.rs  embedding_cache.rs  embedding_initialization.rs  integration_tests.rs  pruning_integration.rs
crates/merlin-core/: Cargo.toml  README.md
crates/merlin-core/src/: config.rs  conversation.rs  error.rs  lib.rs  mod.rs  routing_error.rs  sync.rs  task.rs  task_list.rs  traits.rs  types.rs
crates/merlin-core/tests/: task_step_comprehensive.rs
crates/merlin-deps/: Cargo.toml
crates/merlin-deps/src/: lib.rs
crates/merlin-local/: Cargo.toml  README.md
crates/merlin-local/src/: error.rs  inference.rs  lib.rs  manager.rs  models.rs
crates/merlin-routing/: Cargo.toml  README.md
crates/merlin-routing/benches/: cache_benchmarks.rs  gungraun_integration.rs  gungraun_routing.rs  iai_integration.rs  iai_routing.rs  integration_benchmarks.rs  metrics_benchmarks.rs  routing_benchmarks.rs
crates/merlin-routing/examples/: basic_routing.rs
crates/merlin-routing/src/: config.rs  error.rs  lib.rs  orchestrator.rs  types.rs
crates/merlin-routing/tests/: e2e.rs  integration.rs  (+24 more)
crates/merlin-tooling/: Cargo.toml  README.md  test_comment.js
crates/merlin-tools/: Cargo.toml  README.md  USAGE_GUIDELINES.md
(+1084 files in other folders)
