[workspace]
resolver = "3"
members = [
    "crates/*",
    "crates/merlin-languages/languages/*",
    "benchmarks/crates/*"
    #"crates/integration-tests",
    #"crates/merlin-agent",
    #"crates/merlin-cli",
    #"crates/merlin-context",
    #"crates/merlin-core",
    #"crates/merlin-languages",
    #"crates/merlin-local",
    #"crates/merlin-providers",
    #"crates/merlin-routing",
    #"crates/merlin-tooling",
    #"crates/merlin-languages/languages/rust-backend",
    #"benchmarks/crates/criterion",
    #"benchmarks/crates/gungraun",
    #"benchmarks/crates/quality"
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Internal workspace crates
merlin-agent = { path = "crates/merlin-agent" }
merlin-context = { path = "crates/merlin-context" }
merlin-core = { path = "crates/merlin-core" }
merlin-languages = { path = "crates/merlin-languages" }
merlin-local = { path = "crates/merlin-local" }
merlin-providers = { path = "crates/merlin-providers" }
merlin-routing = { path = "crates/merlin-routing" }
merlin-tooling = { path = "crates/merlin-tooling" }
rust-backend = { path = "crates/merlin-languages/languages/rust-backend" }

# Core dependencies (alphabetically organized)
anyhow = "1.0"
async-trait = "0.1"
bincode = "2.0"
boa_engine = { version = "0.21", features = ["annex-b"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
console = "0.16"
dirs = "6.0"
flate2 = "1.1"
futures = "0.3"
glob = "0.3"
ignore = "0.4"
ollama-rs = "0.3"
petgraph = "0.8"
regex = "1.11"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23"
filetime = "0.2"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "fs", "sync", "time", "process"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
walkdir = "2.5"

# TUI dependencies (carefully managed for compatibility)
crossterm = "0.28"  # Cannot update to 0.29 - incompatible with tui-textarea 0.7
ratatui = "0.29"
tui-textarea = "0.7"
unicode-width = "0.2"

# SWC TypeScript transpiler (update all together for compatibility)
swc_common = "15.0"
swc_ecma_ast = "16.0"
swc_ecma_codegen = "18.0"
swc_ecma_parser = "25.0"
swc_ecma_transforms_base = "28.0"
swc_ecma_transforms_typescript = "31.0"
swc_ecma_visit = "16.0"

# Rust analyzer integration (always use latest)
ra_ap_ide = "0.0"
ra_ap_ide_db = "0.0"
ra_ap_load-cargo = "0.0"
ra_ap_project_model = "0.0"
ra_ap_syntax = "0.0"
ra_ap_vfs = "0.0"

# Testing dependencies
assert_cmd = "2.0"
criterion = { version = "0.7", features = ["html_reports", "async_tokio"] }
gungraun = "0.17"
num_cpus = "1.16"
predicates = "3.1"
tokio-test = "0.4"

[profile.dev]
incremental = true
opt-level = 1
debug = 1
codegen-units = 256
lto = false

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
opt-level = 3

[profile.bench]
debug = true
strip = false

# CI profile: Optimized for minimal disk usage in GitHub Actions
[profile.ci]
inherits = "dev"
opt-level = "s"
debug = 0
strip = "symbols"

[workspace.lints.rust]
unsafe_code = "deny"
warnings = "deny"
future-incompatible = "deny"
let-underscore = "deny"
nonstandard-style = "deny"
refining-impl-trait = "deny"
unused = { level = "deny", priority = -1 }
missing_docs = "deny"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

# Strict lints, should not be changed.
[workspace.lints.clippy]
all = "deny"
complexity = "deny"
correctness = "deny"
nursery = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"

# Complexity
only_used_in_recursion = { level = "allow", priority = 1 }

# Nursery
missing_const_for_fn = { level = "allow", priority = 1 }

# Pedantic
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
wildcard_imports = { level = "allow", priority = 1 }

# Restriction
absolute_paths = { level = "deny", priority = 1 }
allow_attributes_without_reason = { level = "deny", priority = 1 }
assertions_on_result_states = { level = "deny", priority = 1 }
clone_on_ref_ptr = { level = "deny", priority = 1 }
expect_used = { level = "deny", priority = 1 }
if_then_some_else_none = { level = "deny", priority = 1 }
let_underscore_must_use = { level = "deny", priority = 1 }
min_ident_chars = { level = "deny", priority = 1 }
multiple_inherent_impl = { level = "deny", priority = 1 }
mutex_atomic = { level = "deny", priority = 1 }
mutex_integer = { level = "deny", priority = 1 }
print_stderr = { level = "deny", priority = 1 }
print_stdout = { level = "deny", priority = 1 }
redundant_type_annotations = { level = "deny", priority = 1 }
renamed_function_params = { level = "deny", priority = 1 }
rest_pat_in_fully_bound_structs = { level = "deny", priority = 1 }
return_and_then = { level = "deny", priority = 1 }
same_name_method = { level = "deny", priority = 1 }
self_named_module_files = { level = "deny", priority = 1 }
semicolon_inside_block = { level = "deny", priority = 1 }
separated_literal_suffix = { level = "deny", priority = 1 }
shadow_unrelated = { level = "deny", priority = 1 }
single_char_lifetime_names = { level = "deny", priority = 1 }
string_lit_chars_any = { level = "deny", priority = 1 }
tests_outside_test_module = { level = "deny", priority = 1 }
todo = { level = "deny", priority = 1 }
try_err = { level = "deny", priority = 1 }
undocumented_unsafe_blocks = { level = "deny", priority = 1 }
unimplemented = { level = "deny", priority = 1 }
unnecessary_safety_comment = { level = "deny", priority = 1 }
unnecessary_safety_doc = { level = "deny", priority = 1 }
unnecessary_self_imports = { level = "deny", priority = 1 }
unneeded_field_pattern = { level = "deny", priority = 1 }
unreachable = { level = "deny", priority = 1 }
unused_result_ok = { level = "deny", priority = 1 }
unused_trait_names = { level = "deny", priority = 1 }
unwrap_used = { level = "deny", priority = 1 }