[package]
name = "merlin-benchmarks"
version.workspace = true
edition.workspace = true

[[bin]]
name = "quality-bench"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
walkdir.workspace = true
clap.workspace = true
tokio.workspace = true

[lints]
workspace = true
