[package]
name = "merlin-benchmarks"
version.workspace = true
edition.workspace = true

[[bin]]
name = "quality-bench"
path = "src/main.rs"

[[bin]]
name = "perf-bench"
path = "src/perf_bench.rs"

[dependencies]
merlin-context.workspace = true
merlin-core.workspace = true
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
walkdir.workspace = true
clap.workspace = true
tokio.workspace = true
chrono.workspace = true

[lints]
workspace = true
