[package]
name = "agentic-agent"
version.workspace = true
edition.workspace = true

[dependencies]
agentic-core.workspace = true
agentic-providers.workspace = true
agentic-context.workspace = true
agentic-languages.workspace = true
async-trait = "0.1"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true

[lints]
workspace = true
