[package]
name = "agentic-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agentic"
path = "src/main.rs"

[dependencies]
agentic-core = { path = "../agentic-core" }
agentic-providers = { path = "../agentic-providers" }
agentic-context = { path = "../agentic-context" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
