[package]
name = "agentic-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agentic"
path = "src/main.rs"

[dependencies]
agentic-core.workspace = true
agentic-providers.workspace = true
agentic-context.workspace = true
agentic-languages.workspace = true
agentic-agent.workspace = true
agentic-routing = { path = "../agentic-routing" }
agentic-local = { path = "../agentic-local" }
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
console.workspace = true
dialoguer.workspace = true
reqwest.workspace = true

[lints]
workspace = true
