[package]
name = "agentic-context"
version.workspace = true
edition.workspace = true

[dependencies]
agentic-core.workspace = true
agentic-languages.workspace = true
walkdir.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
ollama-rs.workspace = true

[lints]
workspace = true
