[package]
name = "agentic-context"
version.workspace = true
edition.workspace = true

[dependencies]
agentic-core.workspace = true
agentic-languages.workspace = true
rust-backend = { path = "../agentic-languages/languages/rust-backend" }
walkdir.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
ollama-rs.workspace = true
indicatif.workspace = true
ignore.workspace = true
bincode = "1.3"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[lints]
workspace = true
