[package]
name = "agentic-providers"
version.workspace = true
edition.workspace = true

[dependencies]
agentic-core = { path = "../agentic-core" }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }

[lints]
workspace = true
