[package]
name = "agentic-routing"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
agentic-core = { path = "../agentic-core" }
agentic-providers = { path = "../agentic-providers" }

# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# Data structures
uuid = { version = "1.11", features = ["v4", "serde"] }
petgraph = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Utilities
tempfile = "3.14"

[dev-dependencies]
tokio-test = "0.4"
