[package]
name = "agentic-tools"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true

[lints]
workspace = true
