[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true

[dependencies]
# Merlin crates (alphabetically organized)
merlin-agent = { path = "../merlin-agent" }
merlin-context = { path = "../merlin-context" }
merlin-core = { path = "../merlin-core" }
merlin-providers = { path = "../merlin-providers" }
merlin-routing = { path = "../merlin-routing" }
merlin-tooling = { path = "../merlin-tooling" }

# External dependencies
anyhow.workspace = true
async-trait.workspace = true
crossterm.workspace = true
num_cpus.workspace = true
ratatui.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
tracing.workspace = true
tracing-subscriber.workspace = true
tui-textarea.workspace = true

[lib]
name = "integration_tests"
path = "src/lib.rs"

[[test]]
name = "unified_tests"
path = "tests/unified_tests.rs"
harness = true

[[test]]
name = "core_task_step"
path = "tests/core/task_step_comprehensive.rs"
harness = true

[[test]]
name = "routing_task_list_e2e"
path = "tests/routing/task_list_e2e.rs"
harness = true

[lints]
workspace = true