[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true

[dependencies]
# Merlin crates (alphabetically organized)
merlin-agent = { path = "../merlin-agent" }
merlin-cli = { path = "../merlin-cli", features = ["test-util"] }
merlin-context = { path = "../merlin-context" }
merlin-core = { path = "../merlin-core" }
merlin-providers = { path = "../merlin-providers" }
merlin-routing = { path = "../merlin-routing" }
merlin-tooling = { path = "../merlin-tooling" }

# External dependencies
merlin-deps.workspace = true
async-trait.workspace = true
num_cpus.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }

[lib]
name = "integration_tests"
path = "src/lib.rs"

[[test]]
name = "fixture_tests"
path = "tests/fixture_tests.rs"
harness = true

[lints]
workspace = true