[package]
name = "merlin-agent"
version.workspace = true
edition.workspace = true

[dependencies]
merlin-context.workspace = true
merlin-core.workspace = true
merlin-languages.workspace = true
merlin-local.workspace = true
merlin-providers.workspace = true
merlin-routing.workspace = true
merlin-tooling.workspace = true
async-trait.workspace = true
petgraph.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
walkdir.workspace = true
tempfile.workspace = true
num_cpus.workspace = true

[lints]
workspace = true
