[package]
name = "merlin-agent"
version.workspace = true
edition.workspace = true

[dependencies]
merlin-context.workspace = true
merlin-core.workspace = true
merlin-deps.workspace = true
merlin-languages.workspace = true
merlin-local.workspace = true
merlin-providers.workspace = true
merlin-routing.workspace = true
merlin-tooling.workspace = true
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
num_cpus.workspace = true

[lints]
workspace = true
