[package]
name = "merlin-cli"
version.workspace = true
edition.workspace = true
default-run = "merlin"

[[bin]]
name = "merlin"
path = "src/main.rs"
test = false  # Don't run tests for the binary, only the library
# Note: Bin inherits all lints from lib, no need to check separately

[dependencies]
bincode.workspace = true
clap.workspace = true
merlin-agent.workspace = true
merlin-context.workspace = true
merlin-core.workspace = true
merlin-deps.workspace = true
merlin-languages.workspace = true
merlin-local.workspace = true
merlin-providers.workspace = true
merlin-routing.workspace = true
serde.workspace = true
tokio.workspace = true

[features]
# Enable test utilities for integration tests
test-util = []

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true

[lints]
workspace = true
