[package]
name = "merlin-cli"
version.workspace = true
edition.workspace = true
default-run = "merlin"

[[bin]]
name = "merlin"
path = "src/main.rs"
test = false

[dependencies]
bincode.workspace = true
merlin-agent.workspace = true
merlin-context.workspace = true
merlin-core.workspace = true
merlin-deps.workspace = true
merlin-languages.workspace = true
merlin-local.workspace = true
merlin-providers.workspace = true
merlin-routing.workspace = true
merlin-tooling.workspace = true
pico-args.workspace = true
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true

[lints]
workspace = true
