[package]
name = "merlin-cli"
version.workspace = true
edition.workspace = true
default-run = "merlin"

[[bin]]
name = "merlin"
path = "src/main.rs"
test = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
crossterm.workspace = true
dirs.workspace = true
filetime.workspace = true
flate2.workspace = true
merlin-agent.workspace = true
merlin-context.workspace = true
merlin-core.workspace = true
merlin-languages.workspace = true
merlin-local.workspace = true
merlin-providers.workspace = true
merlin-routing.workspace = true
merlin-tooling.workspace = true
futures.workspace = true
pico-args.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tui-textarea.workspace = true
unicode-width.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true

[lints]
workspace = true
