[package]
name = "merlin-context"
version.workspace = true
edition.workspace = true

[dev-dependencies]
tempfile.workspace = true

[dependencies]
merlin-core.workspace = true
merlin-languages.workspace = true
rust-backend.workspace = true
bincode.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
ignore.workspace = true
ollama-rs.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
walkdir.workspace = true

[lints]
workspace = true
