[package]
name = "merlin-context"
version.workspace = true
edition.workspace = true

[dependencies]
bincode.workspace = true
merlin-core.workspace = true
merlin-deps.workspace = true
merlin-languages.workspace = true
rust-backend.workspace = true
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
harness = true

[lints]
workspace = true
