[package]
name = "merlin-context"
version.workspace = true
edition.workspace = true

[dependencies]
bincode.workspace = true
ignore.workspace = true
merlin-core.workspace = true
merlin-languages.workspace = true
futures.workspace = true
ollama-rs.workspace = true
regex.workspace = true
serde.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
walkdir.workspace = true

[dev-dependencies]
tokio.workspace = true

[features]
test-helpers = []

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
harness = true

[lints]
workspace = true
