[package]
name = "merlin-core"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
reqwest.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
dirs.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true

