[package]
name = "merlin-deps"
version.workspace = true
edition.workspace = true

[lib]
# Build both dylib (faster dev builds) and rlib (for LTO/flamegraph in release)
# Compiler will prefer dylib in dev, rlib used for LTO in release
crate-type = ["dylib", "rlib"]

[dependencies]
# Core dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
boa_engine = { workspace = true }
chrono = { workspace = true }
console = { workspace = true }
dirs = { workspace = true }
flate2 = { workspace = true }
glob = { workspace = true }
ignore = { workspace = true }
petgraph = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
filetime = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }

# TUI dependencies
crossterm = { workspace = true }
ratatui = { workspace = true }
tui-textarea = { workspace = true }
unicode-width = { workspace = true }

# SWC TypeScript transpiler
swc_common = { workspace = true }
swc_ecma_ast = { workspace = true }
swc_ecma_codegen = { workspace = true }
swc_ecma_parser = { workspace = true }
swc_ecma_transforms_base = { workspace = true }
swc_ecma_transforms_typescript = { workspace = true }
swc_ecma_visit = { workspace = true }
