[package]
name = "merlin-local"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
merlin-core = { path = "../merlin-core" }

# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"

