[package]
name = "merlin-local"
version.workspace = true
edition.workspace = true

[dependencies]
merlin-core.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true

