[package]
name = "merlin-local"
version.workspace = true
edition.workspace = true

[dependencies]
merlin-core.workspace = true
merlin-deps.workspace = true
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true

