[package]
name = "merlin-routing"
version.workspace = true
edition.workspace = true

[dependencies]
merlin-core.workspace = true
merlin-context.workspace = true
merlin-providers.workspace = true
merlin-local.workspace = true
merlin-languages.workspace = true
merlin-tooling.workspace = true
async-trait.workspace = true
tokio.workspace = true
uuid.workspace = true
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tui-textarea.workspace = true
textwrap.workspace = true
flate2.workspace = true
tempfile.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true
tracing.workspace = true
regex.workspace = true
dirs.workspace = true
toml.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
merlin-agent.workspace = true
merlin-tooling.workspace = true

[lints]
workspace = true
